--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-auth": "^4.24.7",
     "nodemon": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-horizontal-scrolling-menu": "^7.1.1"
   },
   "devDependencies": {
     "@types/node": "^20",
