--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-horizontal-scrolling-menu": "^7.1.1"
+    "react-horizontal-scrolling-menu": "^7.1.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
